force-app/main/default/objects/PatternSetting__c/PatternSetting__c.object-meta.xml
<CustomObject>
    <label>PatternSetting</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pattern Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>