force-app/main/default/objects/PatternSetting__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tubes</fullName>
            </value>
            <value>
                <fullName>Wheels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>