force-app/main/default/objects/PatternSetting__c/fields/ERP_FacetGroup__c.field-meta.xml
<CustomField>
    <fullName>ERP_FacetGroup__c</fullName>
    <label>ERP_FacetGroup</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ObjectType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SGMP</fullName>
            </value>
            <value>
                <fullName>RSMP</fullName>
            </value>
            <value>
                <fullName>GAMP</fullName>
            </value>
            <value>
                <fullName>RAMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>