force-app/main/default/objects/PatternSetting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Variant</fullName>
            </value>
            <value>
                <fullName>Extention</fullName>
            </value>
            <value>
                <fullName>Trash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>