force-app/main/default/objects/PatternSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Regex__c</columns>
    <columns>Domain__c</columns>
    <columns>ERP_FacetGroup__c</columns>
    <columns>ObjectType__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>